Fixed naughty scrollbar on Firefox

--- a/src/_includes/main.scss
+++ b/src/_includes/main.scss
@@ -8,6 +8,11 @@ $fa-font-path: "/webfonts";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
 
+html#demo {
+  // Needs to be on the html element for Firefox
+  overflow: hidden;
+}
+
 .board-message-box {
   fill: $light;
   stroke: none;
@@ -76,6 +81,8 @@ $fa-font-path: "/webfonts";
   @extend .corner-control;
   top: 0;
   right: 0;
+
+  box-shadow: $box-shadow;
 }
 
 #board-buttons {
@@ -111,6 +118,8 @@ $fa-font-path: "/webfonts";
   @extend .corner-control;
   top: 0;
   right: 0;
+
+  box-shadow: $box-shadow;
 
   & .message-body {
     div {
